--- a/index.html
+++ b/index.html
@@ -71,40 +71,76 @@
             </div>
         </div>
 
-        <div id="view-result" class="hidden pb-20">
+       <div id="view-result" class="hidden pb-24">
             <div class="bg-slate-800 rounded-xl p-5 shadow-lg border border-slate-700 space-y-4">
-                <div class="flex justify-between items-center mb-2">
-                    <h3 class="font-bold text-slate-200">Verificar Datos</h3>
-                    <span class="text-xs text-green-400 bg-green-900/30 px-2 py-1 rounded">IA Finalizada</span>
+                
+                <div class="flex justify-between items-center border-b border-slate-700 pb-2">
+                    <h3 class="font-bold text-slate-200">Detalle del Comprobante</h3>
+                    <span class="text-xs bg-blue-900 text-blue-200 px-2 py-1 rounded border border-blue-700">IA Review</span>
                 </div>
 
-                <div>
-                    <label class="text-xs text-slate-400 ml-1">Comercio</label>
-                    <input type="text" id="editComercio" class="input-field" placeholder="Nombre del local">
-                </div>
-
-                <div class="grid grid-cols-2 gap-4">
+                <div class="grid grid-cols-2 gap-3">
+                    <div class="col-span-2">
+                        <label class="text-xs text-slate-400 ml-1">Comercio / Razón Social</label>
+                        <input type="text" id="editComercio" class="input-field" placeholder="Ej: COTO C.I.C.S.A.">
+                    </div>
                     <div>
                         <label class="text-xs text-slate-400 ml-1">Fecha</label>
                         <input type="date" id="editFecha" class="input-field">
                     </div>
                     <div>
                         <label class="text-xs text-slate-400 ml-1">CUIT</label>
-                        <input type="text" id="editCuit" class="input-field" placeholder="20-...">
+                        <input type="text" id="editCuit" class="input-field" placeholder="30-..." inputmode="numeric">
+                    </div>
+                </div>
+
+                <div class="grid grid-cols-3 gap-3">
+                    <div>
+                        <label class="text-xs text-slate-400 ml-1">Tipo</label>
+                        <select id="editTipo" class="input-field appearance-none">
+                            <option value="Ticket">Tique</option>
+                            <option value="Factura A">Fact A</option>
+                            <option value="Factura B">Fact B</option>
+                            <option value="Factura C">Fact C</option>
+                        </select>
+                    </div>
+                    <div class="col-span-2">
+                        <label class="text-xs text-slate-400 ml-1">Número (Pto-Num)</label>
+                        <input type="text" id="editNumero" class="input-field" placeholder="0001-00001234">
                     </div>
                 </div>
 
                 <div>
-                    <label class="text-xs text-slate-400 ml-1">Total ($)</label>
-                    <input type="number" step="0.01" id="editTotal" class="input-field text-xl font-bold text-green-400" placeholder="0.00">
+                    <label class="text-xs text-slate-400 ml-1">Categoría / Rubro</label>
+                    <input type="text" id="editCategoria" class="input-field" placeholder="Ej: Almuerzo, Nafta...">
                 </div>
 
-                <div class="pt-4 flex gap-3">
+                <div class="bg-slate-900/50 p-3 rounded-lg border border-slate-700/50 space-y-3">
+                    <p class="text-xs font-bold text-slate-500 uppercase">Impuestos</p>
+                    
+                    <div class="grid grid-cols-2 gap-3">
+                        <div>
+                            <label class="text-xs text-slate-400 ml-1">IVA Total ($)</label>
+                            <input type="number" step="0.01" id="editIva" class="input-field text-right" placeholder="0.00">
+                        </div>
+                        <div>
+                            <label class="text-xs text-slate-400 ml-1">IIBB / Perc. ($)</label>
+                            <input type="number" step="0.01" id="editIIBB" class="input-field text-right" placeholder="0.00">
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <label class="text-xs text-slate-400 ml-1 font-bold text-green-500">TOTAL A PAGAR ($)</label>
+                    <input type="number" step="0.01" id="editTotal" class="input-field text-3xl font-bold text-green-400 text-right bg-slate-900" placeholder="0.00">
+                </div>
+
+                <div class="pt-4 flex gap-3 sticky bottom-0 bg-slate-800 pb-2">
                     <button onclick="resetApp()" class="flex-1 py-3 rounded-lg border border-slate-600 text-slate-300 font-medium hover:bg-slate-700">
-                        Descartar
+                        Cancelar
                     </button>
                     <button onclick="confirmarYGuardar()" id="btnSave" class="flex-1 py-3 rounded-lg bg-green-600 text-white font-bold hover:bg-green-700 shadow-lg shadow-green-900/20 flex justify-center items-center gap-2">
-                        <span>Confirmar</span> <i data-lucide="check" class="w-4 h-4"></i>
+                        <span>Guardar</span> <i data-lucide="check" class="w-4 h-4"></i>
                     </button>
                 </div>
             </div>
@@ -297,3 +333,4 @@
 </body>
 
 </html>
+
